--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animate_do: ^3.3.4
   google_fonts: ^6.2.1
   provider: ^6.1.2
+  dio: ^5.5.0+1
 
 dev_dependencies:
   flutter_test:
