--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.1.2
   dio: ^5.5.0+1
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
