--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   dio: ^5.5.0+1
   shared_preferences: ^2.2.3
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
